logfile.txt

In [6]: t("10^-6")
10^-6
2019-12-27 20:34:19.488822

In [7]: t("plasma current 90V まだ繋がってない")
plasma current 90V まだ繋がってない
2019-12-27 20:47:44.891902

In [8]: t("cathode on")
cathode on
2019-12-27 20:48:36.838551

In [9]: t("24.3A filament cathode")
24.3A filament cathode
2019-12-27 20:48:49.611701

In [10]: t("plasma 1A")
plasma 1A
2019-12-27 20:49:38.915852

In [11]: t("argon gout")
argon gout
2019-12-27 20:52:33.303608

In [12]: t("argon gin")
argon gin
2019-12-27 20:52:59.692105

In [13]: t("plasma 2A")
plasma 2A
2019-12-27 20:56:44.275986

In [14]: t("cathode off")
cathode off
2019-12-27 20:58:34.710453

In [15]: t("10^-7")
10^-7
2019-12-27 20:59:21.328001

In [16]: t("cathode on")
cathode on
2019-12-27 21:00:33.921996

In [17]: t("anode on")
anode on
2019-12-27 21:01:44.917410

In [18]: t("argon gin")
argon gin
2019-12-27 21:01:54.950280

In [19]: t("ミスは2019-12-27 20:58:34.710453")
ミスは2019-12-27 20:58:34.710453
2019-12-27 21:02:30.682579

In [20]: t("ミスは2019-12-27 20:58:34.710453に起こったgout")
ミスは2019-12-27 20:58:34.710453に起こったgout
2019-12-27 21:02:52.493401

In [21]: t("plasma 2A")
plasma 2A
2019-12-27 21:02:59.214170

In [22]: t("plasma 1A")
plasma 1A
2019-12-27 21:05:16.148753

In [23]: t("goutは重水素のこと")
goutは重水素のこと
2019-12-27 21:09:04.444761

In [24]: t("今はアルゴンだけ")
今はアルゴンだけ
2019-12-27 21:09:26.053601

In [25]: t("argon gout")
argon gout
2019-12-27 21:09:47.351981

In [26]: t("cathode off")
cathode off
2019-12-27 21:10:09.636516

In [27]: t("plasmaなしでもちょっとpereamationする、あ力しだい")
plasmaなしでもちょっとpereamationする、あ力しだい
2019-12-27 21:17:43.321627

In [28]: t("2 10^-3 Torr 重水素")
2 10^-3 Torr 重水素
2019-12-27 21:18:09.651012

In [29]: t("temp: 290")
temp: 290
2019-12-27 21:19:46.329887

In [30]: t("argon gin")
argon gin
2019-12-27 21:21:14.796326

In [31]: t("filamment on ")
filamment on
2019-12-27 21:21:37.228024

In [32]: t("アルゴンプラズマ")
アルゴンプラズマ
2019-12-27 21:21:53.428275

In [33]: t("上 1A")
上 1A
2019-12-27 21:23:00.444874

In [34]: t("プラズマに重水素入れてみる”）
    ...: )
  File "<ipython-input-34-056ca83b59b5>", line 1
    t("プラズマに重水素入れてみる”）
                      ^
SyntaxError: EOL while scanning string literal


In [35]: t("重水素入れてみた")
重水素入れてみた
2019-12-27 21:23:49.263726

In [36]: t("argon gout")
argon gout
2019-12-27 21:30:45.814071

In [37]: t("cathoede off")
cathoede off
2019-12-27 21:31:19.950190

In [38]: t("cathode on")
cathode on
2019-12-27 21:34:23.365773

In [39]: t("cathode: 30A")
cathode: 30A
2019-12-27 21:34:40.912922

In [40]: t("cathode off")
cathode off
2019-12-27 21:36:32.311850

In [41]: t("重水素のプラズマなしで透過を測定できるか？できなかった")
重水素のプラズマなしで透過を測定できるか？できなかった
2019-12-27 21:36:52.739336

In [42]: t("QMS必要")
QMS必要
2019-12-27 21:37:01.778096